[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.commitizen]
version = "1.0.1"
version_files = ["cz_legacy/__init__.py:^__version", "pyproject.toml:^version"]

[tool.poetry]
authors = ["Kyle King <dev.act.kyle@gmail.com>"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: Implementation :: CPython",
] # https://pypi.org/classifiers/
description = "Extends Conventional Commits Change Types with User-Defined Legacy Types for Commitizen"
documentation = "https://cz_legacy.kyleking.me"
include = ["LICENSE"]
keywords = ["commitizen", "conventional commits", "git"]
license = "MIT"
maintainers = []
name = "cz_legacy"
readme = "docs/README.md"
repository = "https://github.com/kyleking/cz_legacy"
version = "1.0.1"

[tool.poetry.dependencies]
# Keep in sync with commitizen (Note: v3 will be ^3.7)
# https://github.com/commitizen-tools/commitizen/blob/378a42881891633d8a81939cb46426eb36ed01aa/pyproject.toml#L50
python = "^3.7"
commitizen = ">=3.0.0"

[tool.poetry.group.dev.dependencies]
calcipy = {python = "^3.9.13", extras = ["ddict", "doc", "lint", "nox", "stale", "tags", "test", "types"], version = ">=2.0.1"}
mkdocs_build_plantuml_plugin = "1.9.0" # Issue with Python 3.8 and unknown Path.walk()

# Required for discovery by 'commitizen'
[tool.poetry.plugins."commitizen.plugin"]
"cz_legacy" = "cz_legacy.cz_legacy:_LegacyCz"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/kyleking/cz_legacy/issues"
"Changelog" = "https://github.com/kyleking/cz_legacy/blob/main/docs/docs/CHANGELOG.md"

[tool.pyright]
include = ["cz_legacy"]
pythonVersion = "3.8"

[tool.tomlsort]
all = true
in_place = true
sort_first = ["python"]
trailing_comma_inline_array = true
